<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crr_viewPager_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:fillViewport="true"
    android:isScrollContainer="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.carerecipient.CareRecipientMainFragment">

    <FrameLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/request_service_card"
                style="@style/ClickableCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorRequestService">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_horizontal_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CardLargeTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/request_service_title" />

                        <TextView
                            style="@style/default_content_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/request_service_content" />

                        <TextView
                            style="@style/CardFooterButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/request_service_button" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_ring_volume_36dp"
                        android:tint="@color/white" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/view_appointments_card"
                style="@style/ClickableCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                app:cardBackgroundColor="@color/colorViewAppointments">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_horizontal_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CardLargeTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view_appointments_title" />

                        <TextView
                            style="@style/default_content_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view_appointments_content" />

                        <TextView
                            style="@style/CardFooterButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view_appointments_button" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_ring_volume_36dp"
                        android:tint="@color/white" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/view_tentative_request_card"
                style="@style/ClickableCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                app:cardBackgroundColor="@color/colorViewTentativeRequest">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_horizontal_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CardLargeTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view_tentative_requests_title" />

                        <TextView
                            style="@style/default_content_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view_tentative_requests_content" />

                        <TextView
                            style="@style/CardFooterButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view_tentative_requests_button" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_ring_volume_36dp"
                        android:tint="@color/white" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/logout_card"
                style="@style/ClickableCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                app:cardBackgroundColor="@color/colorLogout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:text="@string/action_logout"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_font_size" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <include
            layout="@layout/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

    </FrameLayout>

</android.support.v4.widget.NestedScrollView>
