<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caregiving.services.android.caregiver.LoginActivity">

    <ScrollView
        android:id="@+id/scrollview_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:id="@+id/content_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/app_logo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:gravity="bottom|center_horizontal"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_app_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Montserrat"
                    android:gravity="center"
                    android:textSize="@dimen/app_logo_font_size" />

                <!-- Login progress -->

                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin_large"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:clipToPadding="false"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_id_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_large"
                    android:layout_marginRight="@dimen/activity_horizontal_margin_large">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_24dp"
                        android:drawablePadding="@dimen/activity_horizontal_margin"
                        android:drawableTint="@color/secondary_text_light"
                        android:hint="@string/prompt_user_id"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_edit_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_large"
                    android:layout_marginRight="@dimen/activity_horizontal_margin_large"
                    android:layout_marginTop="@dimen/activity_horizontal_margin">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_vpn_key_24dp"
                        android:drawablePadding="@dimen/activity_horizontal_margin"
                        android:drawableTint="@color/secondary_text_light"
                        android:fontFamily=""
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/content_wrapper"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin_large"
                    android:text="@string/action_log_in" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>



